--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "hapi": "^16.1.1",
+    "hapi-postgres-connection": "^6.1.0"
   }
 }
