--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "this is to bootstrap a simple node application with test driver development",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "mocha"
   },
   "author": "Rajnish Dashora, Shivam Barsaley",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0"
   },
   "dependencies": {
     "hapi": "^16.1.1",
-    "hapi-postgres-connection": "^6.1.0"
+    "hapi-postgres-connection": "^6.1.0",
+    "inert": "^4.2.0"
   }
 }
