--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "hapi": "^16.1.1",
+    "hapi-cors-headers": "^1.0.0",
     "hapi-postgres-connection": "^6.1.0",
     "inert": "^4.2.0"
   }
